{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 53,
  "lineage": "dfc8c753-6891-749f-b618-f6747ab491b2",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "terra-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/publicIPAddresses/terra-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.89.130.214",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "terra-ip",
            "resource_group_name": "terra-rg",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terra-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/networkInterfaces/terra-nic",
            "internal_domain_name_suffix": "mkin0pr1qlvele3i3hiokkqncf.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/publicIPAddresses/terra-ip",
                "subnet_id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/virtualNetworks/terra-vn/subnets/terra-subnet"
              }
            ],
            "location": "japaneast",
            "mac_address": "60-45-BD-67-F1-A1",
            "name": "terra-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "terra-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Compute/virtualMachines/terra-vm01"
          },
          "dependencies": [
            "azurerm_public_ip.terra-ip",
            "azurerm_resource_group.terra-rg",
            "azurerm_subnet.terra-subnet",
            "azurerm_virtual_network.terra-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terra-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/networkSecurityGroups/terra-sg",
            "location": "japaneast",
            "name": "terra-sg",
            "resource_group_name": "terra-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "terra-dev-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "terra-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/networkSecurityGroups/terra-sg/securityRules/terra-dev-rule",
            "name": "terra-dev-rule",
            "network_security_group_name": "terra-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terra-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terra-sg",
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terra-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/publicIPAddresses/terra-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.89.130.214",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "terra-ip",
            "resource_group_name": "terra-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terra-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/virtualNetworks/terra-vn/subnets/terra-subnet",
            "name": "terra-subnet",
            "resource_group_name": "terra-rg",
            "virtual_network_name": "terra-vn"
          },
          "dependencies": [
            "azurerm_resource_group.terra-rg",
            "azurerm_virtual_network.terra-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "terra-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/virtualNetworks/terra-vn/subnets/terra-subnet",
            "network_security_group_id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/networkSecurityGroups/terra-sg",
            "subnet_id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/virtualNetworks/terra-vn/subnets/terra-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.terra-sg",
            "azurerm_resource_group.terra-rg",
            "azurerm_subnet.terra-subnet",
            "azurerm_virtual_network.terra-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terra-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3edd9062-823b-45ea-93a8-e9d0e52a0d15",
            "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/virtualNetworks/terra-vn",
            "location": "japaneast",
            "name": "terra-vn",
            "resource_group_name": "terra-rg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/virtualNetworks/terra-vn/subnets/terra-subnet",
                "name": "terra-subnet",
                "security_group": "/subscriptions/5318fb40-710c-411c-bd3a-86387d128c27/resourceGroups/terra-rg/providers/Microsoft.Network/networkSecurityGroups/terra-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    }
  ]
}